Cascading Change Log

4.0 [unreleased]

  Added c.t.l.h.LocalHfsAdaptor, a c.t.FileAdaptorTap implementation, to provide Apache HDFS access, via c.t.h.Hfs
  and existing Apache Hadoop c.s.Scheme implementations, to local mode c.f.Flow instances.

  Added c.t.AdaptorTap and c.t.FileAdaptorTap implementations to ease adapting a c.t.Tap implementation from its
  original intended target platform for execution on another.

  Added c.s.l.CompressorScheme base class providing compression support to c.s.l.TextLine, c.s.l.TextDelimited,
  c.n.j.l.JSONTextLine and any sub-classes in local mode.

  Added c.n.j.JSONCreateFunction to compliment c.n.j.JSONSetFunction for creating new JSON objects.

  Added c.n.j.h.JSONTextLine and c.n.j.l.JSONTextLine c.s.Scheme classes for native JSON text file support.

  Added c.t.t.SerializableType annotation to allow for discovery of serialization providers for supported platforms.

  Updated project to use JGrapht version 1.1.0.

  Added sub-projects cascading-nested and cascading-nested-json providing base support for nested data types and
  direct support for JSON data processing.

  Removed cascading-xml sub-project.

  Updated c.s.l.TextDelimited to detect if data is being appended to an existing file before writing the header.

  Fixed issue where the local mode runner would not gracefully shutdown threads and clean up resources on
  c.f.Flow#stop() and JVM shutdown conditions.

  Updated c.t.p.DelimitedPartition to support arbitrary postfix values so that static filenames and paths can be
  applied.

  Updated all c.o.regex functions to honor declared field types, if any. THe functions will now coerce parsed String
  values into declared primitive or custom canonical types.

  Fixed issue where in some cases a c.t.Tuple operation result would get marked as unmodifiable.

  Updated c.o.t.DateFormatter and c.o.t.DateParser to honor declared field types, if any. Both operations will now